kube/02-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pizza-ingress
  namespace: app
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: generate-order-service
              servicePort: 8080
